Fixed more spacing issues between sections

--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ a:hover {
   flex-wrap: wrap;
   margin-top: 170px;
   padding-top: 100px;
-  margin-bottom: 420px;
   
   
 }
@@ -127,7 +126,10 @@ a:hover {
   height: auto;
   width: 150px;
 }
-
+#other-products {
+  margin-top: 170px;
+  padding-top: 100px;
+}
 #keyboard {
   display: flex;
   flex-direction: column;
@@ -251,7 +253,7 @@ a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 220px;
+  margin-top: 170px;
   margin-bottom: 60px;
 }
 .email-child {
